Centering the movie card when on smaller screens plus fixing search engine

--- a/client/src/container/App.css
+++ b/client/src/container/App.css
@@ -14,3 +14,7 @@
     width: 110px;
 }
 }
+
+#cl {
+  margin-left: 45px;
+}
